--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-.App {
+/* .App {
   text-align: center;
 }
 
@@ -35,4 +35,80 @@
   to {
     transform: rotate(360deg);
   }
+} */
+.App{
+  
+  
+}
+
+.App-header {
+  display: flex;
+  width: 100%;
+  justify-content: space-between; /* 사이드바와 apiroom이 가로로 배치되게 */
+}
+
+.sidebar{
+  position: fixed;
+  margin-left: 0px;
+  height: 100vh;
+  width: 300px;
+  border: 3px solid black;
+  
+}
+.apiroom{
+  margin-top: 100px;
+  margin-left: auto;
+  margin-right: auto;
+  display:flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+.inputurl{
+  width: 400px;
+}
+
+.reponsediv{
+  width: 500px;
+  height: 200px;
+  border: 3px solid black;
+}
+
+.result{
+  margin-top: 100px;
+  width: 100%;
+  height: 100%;
+  border: 3px solid black;
+  
+  
+  
+}
+
+.paramsroom input{
+  margin-left: 10px;
+}
+
+/* 테이블 스타일 */
+.result table {
+  width: 100%; /* 테이블 너비 */
+  border-collapse: collapse; /* 테이블 셀 간격 없애기 */
+}
+
+.result th, .result td {
+  border: 1px solid #ddd; /* 테이블 셀의 경계선 */
+  padding: 8px; /* 셀 안쪽 여백 */
+  text-align: left; /* 텍스트 왼쪽 정렬 */
+}
+
+.result th {
+  background-color: #f2f2f2; /* 헤더 배경색 */
+  font-weight: bold; /* 헤더 텍스트 굵게 */
+}
+
+.result tr:nth-child(even) {
+  background-color: #f9f9f9; /* 짝수번째 행 배경색 */
+}
+
+.result tr:hover {
+  background-color: #ddd; /* 마우스 오버 시 배경색 */
 }
